--- a/barb.org
+++ b/barb.org
@@ -388,6 +388,89 @@ everywhere else in the natural number proofs and that's because it is:
 I came from the future because I need these theorems for the integers.
 
 #+begin_src lean4
+@[simp]
+def distance : ℕ → ℕ → ℕ
+  | zero, zero => 0
+  | successor n, zero => successor n
+  | zero, successor m => successor m
+  | successor n, successor m => distance n m
+
+theorem equal_of_distance_equal_zero : ∀ {n m : ℕ}, distance n m = 0 → n = m
+  | zero, zero, _ => rfl
+  | successor n, successor m, h => by
+    unfold distance at h
+    exact congrArg successor (equal_of_distance_equal_zero h)
+
+theorem distance_equal_zero_of_equal : ∀ {n m : ℕ}, n = m → distance n m = 0
+  | zero, zero, _ => rfl
+  | successor n, successor m, h => by
+    unfold distance
+    exact distance_equal_zero_of_equal (successor_injective h)
+
+theorem distance_self : ∀ (n : ℕ), distance n n = 0 :=
+  λ _ => distance_equal_zero_of_equal rfl
+
+theorem distance_zero_left : ∀ (n : ℕ), distance n 0 = n
+  | zero => rfl
+  | successor n => by unfold distance; rfl
+
+theorem distance_commutative : ∀ (n m : ℕ), distance n m = distance m n
+  | zero, zero => distance_zero_left _
+  | zero, successor _ => distance_zero_left (successor _)
+  | successor _, zero => distance_zero_left (successor _)
+  | successor _, successor _ => by
+    simp
+    apply distance_commutative
+
+theorem distance_zero_right (n : ℕ) : distance 0 n = n := by
+  rw [distance_commutative, distance_zero_left]
+
+theorem distance_add_add_right (n m k : ℕ) : distance (n + k) (m + k) = distance n m := by
+  induction k with
+  | zero => rw [← zero_definition, add_zero, add_zero]
+  | successor k ih =>
+    simp [add_successor]
+    exact ih
+
+theorem distance_add_add_left (n m k : ℕ) : distance (n + m) (n + k) = distance m k := by
+  rw [add_commutative n m, add_commutative n k, distance_add_add_right]
+#+end_src
+
+I still can't figure out what to call this next theorem. It states
+that if two sums are equal, the distance between the first terms of
+each sum must be made up for exactly in the distance between the
+second terms.
+
+Writing this out visually is also compelling. Arrange two equal length lines
+cut into two different length segments, name the segments $n$, $m$,
+$k$, and $l$, and then arrange a copy of each segment vertically so
+that their left ends line up. It will become apparent that the
+difference in lengths between $n$ and $k$ match up with the difference
+between $l$ and $m$.
+
+#+begin_src lean4
+theorem distance_equal_of_add_equal {n m k l : ℕ} (h : n + m = k + l) : distance n k = distance l m := by
+  calc
+    distance n k = distance (n + m) (k + m) := (distance_add_add_right n k m).symm
+    _ = distance (k + l) (k + m) := congrArg (λ x => distance x _) h
+    _ = distance l m := distance_add_add_left k l m
+#+end_src
+
+Since we have shown that $\mathnormal{distance}(n, m) = 0$ and $n = m$
+are logically equivalent, we can use the distance function to decide
+equality. This will be a common theme. When we develop decision
+procedures for equality or less than or less equal relations, we often
+establish a logical equivalence between something we know how to
+compute and the proposition we want to decide. The connection between
+decidable propositions, computability, and computational complexity
+seems to be very important, and I'm interested to go deeper on this
+idea.
+
+#+begin_src lean4
+instance decideEqual : DecidableEq Natural
+  | n, m => match h : distance n m with
+    | zero => isTrue (equal_of_distance_equal_zero h)
+    | successor a => isFalse (mt distance_equal_zero_of_equal (h ▸ successor_not_equal_zero a))
 #+end_src
 
 *** Order, addition part
