--- a/barb.org
+++ b/barb.org
@@ -1084,8 +1084,397 @@ instance : Pow Natural Natural where
 ** Integer
 ** Rational
 ** Utilities
+*** Algebra
+:PROPERTIES:
+:header-args: :tangle Barb/Algebra.lean
+:END:
+
+If this project lasts longer than a semester, I hope this module will
+become much more substantial. For now, it is a commutative ring definition.
+
+#+begin_src lean4
+import Barb.Syntax
+
+class CommutativeRing (α : Type u) extends Zero α, One α, Add α, Mul α, Neg α where
+  add_associative : ∀ (x y z : α), (x + y) + z = x + (y + z)
+  add_commutative : ∀ (x y : α), x + y = y + x
+  add_zero : ∀ (x : α), x + 0 = x
+  add_inverse : ∀ (x : α), x + (-x) = 0
+
+  multiply_associative : ∀ (x y z : α), (x * y) * z = x * (y * z)
+  multiply_commutative : ∀ (x y : α), x * y = y * x
+  -- TODO: Do we need to make sure 1 \ne 0? Answer, yes, see Nontrivial class in mathlib
+  multiply_one : ∀ (x : α), x * 1 = x
+
+  left_distributive : ∀ (x y z : α), x * (y + z) = x * y + x * z
+  right_distributive : ∀ (x y z : α), (x + y) * z = x * z + y * z
+
+class Field (α : Type u) extends CommutativeRing α where
+  -- TODO: Pull out into reciprocal operation class which takes a nonzero proof and has nice Inv-like syntax
+  reciprocal : (x : α) → x ≠ 0 → α
+  multiply_inverse : ∀ (x : α) (h : x ≠ 0), x * (reciprocal x h) = 1
+#+end_src
+
 *** Function
+:PROPERTIES:
+:header-args: :tangle Barb/Function.lean
+:END:
+
+Some essential definitions for functions. Now that I'm reading
+/Algebra: Chapter 0/ [cite:@aluffi2009algebra], I'm itching to define
+some category theoretic notions in here like mono- and epi- morphisms,
+but other things have to come first.
+
+#+begin_src lean4
+namespace Function
+
+def Injective (f : α → β) := ∀ {x y}, f x = f y → x = y
+
+def Surjective (f : α → β) := ∀ y, ∃ x, f x = y
+
+def Bijective (f : α → β) := Injective f ∧ Surjective f
+
+-- "_left_ after right is identity", that is, (f ∘ g) = id
+def LeftInverse (g : β → α) (f : α → β) := ∀ x : α, g (f x) = x
+
+-- "_right_ after left is identity", that is, (g ∘ f) = id
+def RightInverse (g : β → α) (f : α → β) := LeftInverse f g
+
+def Involutive (f : α → α) := LeftInverse f f
+
+@[inline]
+def curry : (α × β → φ) → α → β → φ := λ f a b => f (a, b)
+
+@[inline]
+def uncurry : (α → β → φ) → α × β → φ := λ f ⟨a, b⟩ => f a b
+
+variable {α : Type u₁} {β : Type u₂} {φ : Type u₃}
+
+@[simp]
+theorem curry_uncurry_left_inverse : LeftInverse (curry : (α × β → φ) → α → β → φ) (uncurry : (α → β → φ) → α × β → φ) :=
+  λ _ => rfl
+
+@[simp]
+theorem uncurry_curry_left_inverse : LeftInverse (uncurry : (α → β → φ) → α × β → φ) (curry : (α × β → φ) → α → β → φ) :=
+  λ _ => funext λ _ => rfl
+
+end Function
+#+end_src
+
 *** Logic
+:PROPERTIES:
+:header-args: :tangle Barb/Logic.lean
+:END:
+
+**** Exists unique
+We need to formalilze a notion of "there exists a unique." If we have a
+predicate $p$ on a type $\alpha$, and this claim amounts to showing that there exists
+an $x : \alpha$ for which $p$ holds, and then in addition, showing that any
+for other $y : \alpha$, $p$ holding for $y$ implies that $x = y$.
+
+#+begin_src lean4
+def ExistsUnique (p : α → Prop) := ∃ x, p x ∧ ∀ y, p y → y = x
+#+end_src
+
+Then we copy a macro from mathlib without understanding how it works
+so that we can have the nice $\exists!$ syntax.
+
+#+begin_src lean4
+open Lean TSyntax.Compat in
+macro "∃!" xs:explicitBinders ", " b:term : term => expandExplicitBinders ``ExistsUnique xs b
+
+@[app_unexpander ExistsUnique] def unexpandExistsUnique : Lean.PrettyPrinter.Unexpander
+  | `($(_) fun $x:ident ↦ ∃! $xs:binderIdent*, $b) => `(∃! $x:ident $xs:binderIdent*, $b)
+  | `($(_) fun $x:ident ↦ $b)                      => `(∃! $x:ident, $b)
+  | `($(_) fun ($x:ident : $t) ↦ $b)               => `(∃! ($x:ident : $t), $b)
+  | _                                               => throw ()
+#+end_src
+
+The introduction just takes the object and the two conditions, but the
+elimination rule is interesting. Because of proof irrelevance we can
+only eliminate into the ~Prop~ universe, so to eliminate existential
+quantification we provide a function which in all cases can take the
+$x : \alpha$, the proof that $p$ holds for $x$, and the proof of the
+uniqueness of $x$, and can transform these into a proof for another
+proposition $b$.
+
+#+begin_src lean4
+theorem ExistsUnique.introduction {p : α → Prop} (a : α)
+  (h₁ : p a) (h₂ : ∀ y, p y → y = a) : ∃! x, p x := ⟨a, h₁, h₂⟩
+
+theorem ExistsUnique.elimination {p : α → Prop} (b : Prop)
+  (h₂ : ∃! x, p x) (h₁ : ∀ x, p x → (∀ y, p y → y = x) → b) : b :=
+  Exists.elim h₂ (λ w hw => h₁ w hw.left hw.right)
+#+end_src
+
+**** Or
+Nothing to see here, just some lemmas about disjunction that I've
+needed so far.
+
+#+begin_src lean4
+theorem or_imply : (a ∨ b → c) ↔ (a → c) ∧ (b → c) :=
+  ⟨λ h => ⟨h ∘ .inl, h ∘ .inr⟩, λ ⟨ha, hb⟩ => Or.rec ha hb⟩
+
+theorem not_or : ¬(p ∨ q) ↔ ¬p ∧ ¬q := or_imply
+
+theorem Or.symmetric : a ∨ b → b ∨ a
+  | inl a => inr a
+  | inr b => inl b
+
+theorem Or.commutative {a b : Prop} : a ∨ b ↔ b ∨ a := ⟨Or.symmetric, Or.symmetric⟩
+
+theorem Or.implies {a b c d : Prop} (f : a → c) (g : b → d) : a ∨ b → c ∨ d
+  | inl a => Or.inl (f a)
+  | inr b => Or.inr (g b)
+  
+theorem Or.implies_left {a b c : Prop} (f : a → b) : a ∨ c → b ∨ c
+  | inl a => Or.inl (f a)
+  | inr c => Or.inr c
+  
+theorem Or.implies_right {a b c : Prop} (f : b → c) : a ∨ b → a ∨ c
+  | inl a => Or.inl a
+  | inr b => Or.inr (f b)
+
+theorem Or.resolve_left {a b : Prop} (h : a ∨ b) (not_a : ¬a) : b :=
+  match h with
+  | Or.inl ha => absurd ha not_a
+  | Or.inr hb => hb
+
+theorem Or.resolve_right {a b : Prop} (h : a ∨ b) (not_b : ¬b) : a :=
+  match h with
+  | Or.inl ha => ha
+  | Or.inr hb => absurd hb not_b
+#+end_src
+
+**** Relation definitions
+
+This is fun. Here we define a bunch of common binary relations that
+you learn in discrete, so we can use them without duplicating code elsewhere.
+
+#+begin_src lean4
+namespace Relation
+
+variable {α : Sort u} (r : α → α → Prop)
+
+local infix:50 " ≺ " => r
+local notation:50 a:50 " ⊀ " b:50 => ¬(a ≺ b)
+
+def Reflexive := ∀ x, x ≺ x
+
+def Symmetric := ∀ {x y}, x ≺ y → y ≺ x
+
+def Transitive := ∀ {x y z}, x ≺ y → y ≺ z → x ≺ z
+
+def Irreflexive := ∀ x, x ⊀ x
+
+def AntiSymmetric := ∀ {x y}, x ≺ y → y ≺ x → x = y
+
+def Asymmetric := ∀ {x y}, x ≺ y → y ⊀ x
+
+def Connected := ∀ {x y}, x ≠ y → x ≺ y ∨ y ≺ x
+
+def StronglyConnected := ∀ x y, x ≺ y ∨ y ≺ x
+
+end Relation
+#+end_src
+
+**** Relator
+
+Some sneaky stuff is going on here. I've felt like I had a grasp on
+~LiftFunction~ when I was stating some of the ~Quotient~ theorems, but
+not enough to offer any worthwhile exposition on it here right
+now. All I will say is that if we have the relations
+$R : \alpha \to \beta \to \text{Prop}$ and
+$S : \gamma \to \delta \to \text{Prop}$, then the functions
+$f : \alpha \to \gamma$ and $g : \beta \to \delta$ induce a relation
+$\forall a : \alpha, b : \beta, R(a, b) \to S(f(a), g(b))$.
+
+#+begin_src lean4
+namespace Relator
+
+universe u₁ u₂ v₁ v₂
+variable {α : Sort u₁} {β : Sort u₂} {γ : Sort v₁} {δ : Sort v₂}
+variable (R : α → β → Prop) (S : γ → δ → Prop)
+
+def LiftFunction (f : α → γ) (g : β → δ) : Prop :=
+  ∀ {a b}, R a b → S (f a) (g b)
+
+infixr:40 " ⇒ " => LiftFunction
+
+end Relator
+#+end_src
+
 *** Order
 *** Quotient
+:PROPERTIES:
+:header-args: :tangle Barb/Quotient.lean
+:END:
+
+
+I'm not sure there's much to say here yet. I don't understand what
+I've done here enough for writing about it really be useful for me to
+write about it. Very interesting stuff here though, quotient types are
+subtle and I would definitely like to deepen my understanding here.
+
+#+begin_src lean4
+import Barb.Logic
+
+namespace Quot
+
+section
+
+variable {ra : α → α → Prop} {rb : β → β → Prop}
+variable {γ : Sort v} {r : α → α → Prop} {s : β → β → Prop} {t : γ → γ → Prop}
+
+notation:arg "⟦" a "⟧" => Quot.mk _ a
+
+@[elab_as_elim]
+theorem induction_on {α : Sort u} {r : α → α → Prop} {β : Quot r → Prop} (q : Quot r)
+    (h : ∀ a, β (Quot.mk r a)) : β q :=
+  Quot.ind h q
+
+def map (f : α → β) (h : (ra ⇒ rb) f f) : Quot ra → Quot rb :=
+  Quot.lift (λ x => ⟦f x⟧) (λ x y (h₁ : ra x y) => Quot.sound <| h h₁)
+
+def lift₂ (f : α → β → γ) (hr : ∀ a b₁ b₂, s b₁ b₂ → f a b₁ = f a b₂)
+    (hs : ∀ a₁ a₂ b, r a₁ a₂ → f a₁ b = f a₂ b) : Quot r → Quot s → γ :=
+  Quot.lift (λ a => Quot.lift (f a) (hr a))
+    (λ a₁ a₂ ha => funext λ q => Quot.induction_on q λ b => hs a₁ a₂ b ha)
+
+def liftOn₂ (p : Quot r) (q : Quot s) (f : α → β → γ)
+    (hr : ∀ a b₁ b₂, s b₁ b₂ → f a b₁ = f a b₂) (hs : ∀ a₁ a₂ b, r a₁ a₂ → f a₁ b = f a₂ b) : γ :=
+  Quot.lift₂ f hr hs p q
+
+def map₂ (f : α → β → γ) (hr : ∀ a b₁ b₂, s b₁ b₂ → t (f a b₁) (f a b₂))
+    (hs : ∀ a₁ a₂ b, r a₁ a₂ → t (f a₁ b) (f a₂ b)) : Quot r → Quot s → Quot t :=
+  Quot.lift₂ (λ a b => Quot.mk t <| f a b) (λ a b₁ b₂ hb => Quot.sound (hr a b₁ b₂ hb))
+    (λ a₁ a₂ b ha => Quot.sound (hs a₁ a₂ b ha))
+
+@[elab_as_elim]
+def recOnSubsingleton₂ {φ : Quot r → Quot s → Sort w} [h : ∀ a b, Subsingleton (φ ⟦a⟧ ⟦b⟧)]
+    (q₁ : Quot r) (q₂ : Quot s)
+    (f : ∀ a b, φ ⟦a⟧ ⟦b⟧) : φ q₁ q₂ := 
+  @Quot.recOnSubsingleton _ r
+    (λ q => φ q q₂)
+    (λ a => Quot.ind (β := λ b => Subsingleton (φ ⟦a⟧ b)) (h a) q₂) q₁
+    (λ a => Quot.recOnSubsingleton q₂ (λ b => f a b))
+
+theorem lift_construct (f : α → β) (h : ∀ a b, r a b → f a = f b) (a : α) :
+    Quot.lift f h (Quot.mk r a) = f a :=
+  rfl
+
+instance lift.decidablePredicate (r : α → α → Prop) (p : α → Prop) (h : ∀ a b, r a b → p a = p b)
+    [hp : DecidablePred p] :
+    DecidablePred (Quot.lift p h) :=
+  λ q => Quot.recOnSubsingleton (motive := λ _ => Decidable _) q hp
+  
+instance lift₂.decidablePredicate (r : α → α → Prop) (s : β → β → Prop) (p : α → β → Prop)
+    (ha : ∀ a b₁ b₂, s b₁ b₂ → p a b₁ = p a b₂) (hb : ∀ a₁ a₂ b, r a₁ a₂ → p a₁ b = p a₂ b)
+    [hp : ∀ a, DecidablePred (p a)] (q₁ : Quot r) :
+    DecidablePred (Quot.lift₂ p ha hb q₁) :=
+  λ q₂ => Quot.recOnSubsingleton₂ q₁ q₂ hp
+  
+instance (r : α → α → Prop) (q : Quot r) (p : α → Prop) (h : ∀ a b, r a b → p a = p b)
+    [DecidablePred p] :
+    Decidable (Quot.liftOn q p h) :=
+  Quot.lift.decidablePredicate _ _ _ _
+  
+instance (r : α → α → Prop) (s : β → β → Prop) (q₁ : Quot r) (q₂ : Quot s) (p : α → β → Prop)
+    (ha : ∀ a b₁ b₂, s b₁ b₂ → p a b₁ = p a b₂) (hb : ∀ a₁ a₂ b, r a₁ a₂ → p a₁ b = p a₂ b)
+    [∀ a, DecidablePred (p a)] :
+    Decidable (Quot.liftOn₂ q₁ q₂ p ha hb) :=
+  Quot.lift₂.decidablePredicate _ _ _ _ _ _ _
+
+end
+
+end Quot
+
+namespace Quotient
+
+section
+
+variable [sa : Setoid α] [sb : Setoid β] [sc : Setoid γ]
+
+def map (f : α → β) (h : ((· ≈ ·) ⇒ (· ≈ ·)) f f) : Quotient sa → Quotient sb :=
+  Quot.map f h
+
+def map₂ (f : α → β → γ) (h : ((· ≈ ·) ⇒ (· ≈ ·) ⇒ (· ≈ ·)) f f) :
+    Quotient sa → Quotient sb → Quotient sc :=
+  Quotient.lift₂ (λ x y => ⟦(f x y)⟧) (λ _ _ _ _ h₁ h₂ => Quot.sound <| h h₁ h₂)
+  
+@[elab_as_elim]
+def ind₃ {motive : Quotient sa → Quotient sb → Quotient sc → Prop}
+  (h : (a : α) → (b : β) → (c : γ) → motive ⟦a⟧ ⟦b⟧ ⟦c⟧)
+  (q₁ : Quotient sa)
+  (q₂ : Quotient sb)
+  (q₃ : Quotient sc)
+  : motive q₁ q₂ q₃ := by
+  induction q₁ using Quotient.ind
+  induction q₂ using Quotient.ind
+  induction q₃ using Quotient.ind
+  apply h
+  
+@[simp]
+theorem lift_construct (f : α → β) (h : ∀ a b : α, a ≈ b → f a = f b) (x : α) :
+    Quotient.lift f h (Quotient.mk sa x) = f x := 
+  rfl
+
+@[simp]
+theorem lift_construct_on (f : α → β) (h : ∀ a b : α, a ≈ b → f a = f b) (x : α) :
+    Quotient.liftOn (Quotient.mk sa x) f h = f x :=
+  rfl
+
+@[simp]
+theorem equivalent [r : Setoid α] {x y : α} : Quotient.mk r x = ⟦y⟧ ↔ x ≈ y :=
+  ⟨Quotient.exact, Quotient.sound⟩
+
+instance lift.decidablePred (p : α → Prop) (h : ∀ a b, a ≈ b → p a = p b) [DecidablePred p] :
+    DecidablePred (Quotient.lift p h) :=
+  Quot.lift.decidablePredicate _ _ _
+
+instance lift₂.decidablePred (p : α → β → Prop)
+    (h : ∀ a₁ b₁ a₂ b₂, a₁ ≈ a₂ → b₁ ≈ b₂ → p a₁ b₁ = p a₂ b₂)
+    [hf : ∀ a, DecidablePred (p a)]
+    (q₁ : Quotient sa) : DecidablePred (Quotient.lift₂ p h q₁) :=
+  λ q₂ ↦ Quotient.recOnSubsingleton₂ q₁ q₂ hf
+
+instance (q : Quotient sa) (p : α → Prop) (h : ∀ a b, a ≈ b → p a = p b) [DecidablePred p] :
+    Decidable (Quotient.liftOn q p h) :=
+  Quotient.lift.decidablePred _ _ _
+
+instance (q₁ : Quotient sa) (q₂ : Quotient sb) (p : α → β → Prop)
+    (h : ∀ a₁ b₁ a₂ b₂, a₁ ≈ a₂ → b₁ ≈ b₂ → p a₁ b₁ = p a₂ b₂) [∀ a, DecidablePred (p a)] :
+    Decidable (Quotient.liftOn₂ q₁ q₂ p h) :=
+  Quotient.lift₂.decidablePred _ _ _ _
+
+end
+
+end Quotient
+#+end_src
+
 *** Syntax
+:PROPERTIES:
+:header-args: :tangle Barb/Syntax.lean
+:END:
+
+Syntax I stole from mathlib when I defined ~CommutativeRing~.
+
+#+begin_src lean4
+class Zero.{u} (α : Type u) where
+  zero : α
+
+instance Zero.toOfNat0 {α} [Zero α] : OfNat α (nat_lit 0) where
+  ofNat := ‹Zero α›.1
+
+instance Zero.ofOfNat0 {α} [OfNat α (nat_lit 0)] : Zero α where
+  zero := 0
+
+class One (α : Type u) where
+  one : α
+
+instance One.toOfNat1 {α} [One α] : OfNat α (nat_lit 1) where
+  ofNat := ‹One α›.1
+
+instance One.ofOfNat1 {α} [OfNat α (nat_lit 1)] : One α where
+  one := 1
+#+end_src
