More order lemmas

--- a/barb.org
+++ b/barb.org
@@ -3132,50 +3132,125 @@ theorem multiply_nonpositive_right_antitone {c : ℚ} (hc : c ≤ 0) : Antitone 
 *** Absolute value
 
 #+begin_src lean4
-def absolute (x : ℚ) : ℚ := maximum x (-x)
+def magnitude (x : ℚ) : ℚ := maximum x (-x)
 
-macro:max atomic("|" noWs) a:term noWs "|" : term => `(absolute $a)
+macro:max atomic("|" noWs) a:term noWs "|" : term => `(magnitude $a)
 
-/-
--- TODO: Gotta do some abstract algebra first, I'm not tryna do all those ordering proofs again
--- I'm officially stuck until I can clean some of this up.
---
-theorem absolute_nonnegative (x : ℚ) : 0 ≤ |x| := by
-  unfold absolute
-  unfold maximum
-  match less_than_trichotomous 0 x with
-  | Or.inl h => sorry
-  | Or.inr (Or.inl _) => sorry
-  | Or.inr (Or.inr _) => sorry
+theorem magnitude_negate (x : ℚ) : |-x| = |x| := by
+  unfold magnitude 
+  rw [negate_negate]
+
+theorem magnitude_nonnegative (x : ℚ) : 0 ≤ |x| := by
+  unfold magnitude maximum
+  match less_equal_strongly_connected 0 x with
+  | Or.inl h =>
+    split
+    case inl hx => exact less_equal_transitive h hx
+    case inr hx => exact h
+  | Or.inr h =>
+    split
+    case inl hx => exact (negate_antitone h)
+    case inr hx => 
+      apply False.elim 
+      exact hx (less_equal_transitive h (negate_antitone h))
   
-theorem absolute_zero : |0| = 0 := rfl
+theorem magnitude_zero : |0| = 0 := rfl
 
-theorem zero_of_absolute_value_zero (x : ℚ) : |x| = 0 → x = 0 := by
-  skip
+theorem zero_of_magnitude_value_zero {x : ℚ} : |x| = 0 → x = 0 := by
+  unfold magnitude maximum
+  split
+  case inl h =>
+    intro h
+    have := congrArg negate h
+    simp [← negate_zero] at this
+    exact this
+  case inr h => exact id
+
+theorem magnitude_equal_of_nonnegative {x : ℚ} : 0 ≤ x → |x| = x := by
+  intro h
+  unfold magnitude maximum
+  split
+  case inl hx =>
+    have hx' := negate_antitone (h.transitive hx)
+    simp [← negate_zero] at hx'
+    simp [less_equal_antisymmetric hx' h, ← negate_zero]
+  case inr hx =>
+    rfl
+
+theorem magnitude_equal_negate_of_nonpositive {x : ℚ} : x ≤ 0 → |x| = -x := by
+  intro h
+  have := negate_antitone h
+  simp [← negate_zero] at this
+  have foo := magnitude_equal_of_nonnegative this
+  
+theorem magnitude_equal_of_positive (x : ℚ) : 0 < x → |x| = x :=
+  by skip
+
+theorem magnitude_equal_negate_of_negative (x : ℚ) : x < 0 → |x| = -x :=
+  by skip
   
 -- The triangle inequality
--- If only one of the terms is nonpositive, this decreases the absolute value, otherwise the two sides are equal
-theorem absolute_add_less_equal (x y : ℚ) : |x + y| ≤ |x| + |y| := by
-  skip
-  
-theorem absolute_less_equal_of_something (x y : ℚ) : -y ≤ x → x ≤ y → |x| ≤ y := by
+-- If only one of the terms is nonpositive, this decreases the magnitude value, otherwise the two sides are equal
+theorem magnitude_add_less_equal (x y : ℚ) : |x + y| ≤ |x| + |y| := by
   skip
 
-theorem something_of_absolute_less_equal (x y : ℚ) : |x| ≤ y → -y ≤ x ∧ x ≤ y := by
-  skip
+theorem magnitude_less_equal_equivalent_negate_less_equal_self {x y : ℚ} :
+    -y ≤ x ∧ x ≤ y ↔ |x| ≤ y := by
+  apply Iff.intro
+  . intro h
+    unfold magnitude maximum
+    split
+    case inl hx =>
+      have := negate_antitone h.left
+      simp [negate_negate] at this
+      exact this
+    case inr hx =>
+      exact h.right
+  . intro h
+    unfold magnitude maximum at h
+    split at h
+    case inl hx =>
+      apply And.intro
+      . have := negate_antitone h
+        simp [negate_negate] at this
+        exact this
+      . exact less_equal_transitive hx h
+    case inr hxy =>
+      apply And.intro
+      . have := negate_antitone (less_equal_transitive (less_equal_of_not_greater_equal hxy) h)
+        simp at this
+        exact this
+      . exact h
   
-theorem absolute_less_equal_equivalent_something (x y : ℚ) : -y ≤ x ∧ x ≤ y ↔ |x| ≤ y := by
-  skip
-  
-theorem absolute_multiply_equal_multiply_absolute (x y : ℚ) : |x * y| = |x| * |y| := by
-  skip
-  
-theorem absolute_negate (x : ℚ) : |-x| = |x| := by
-  skip
--/
+theorem magnitude_less_equal_of_negate_less_equal {x y : ℚ} : -y ≤ x → x ≤ y → |x| ≤ y :=
+  λ hyx hxy =>
+  magnitude_less_equal_equivalent_negate_less_equal_self.mp (And.intro hyx hxy)
 
-end Rational
+theorem negate_less_equal_of_magnitude_less_equal (x y : ℚ) : |x| ≤ y → -y ≤ x ∧ x ≤ y :=
+  magnitude_less_equal_equivalent_negate_less_equal_self.mpr
+  
+theorem magnitude_multiply_equal_multiply_magnitude (x y : ℚ) : |x * y| = |x| * |y| := by
+  unfold magnitude maximum
+  split
+  case inl hxy =>
+    match less_equal_strongly_connected x 0, less_equal_strongly_connected y 0 with
+    | Or.inl hx, Or.inl hy =>
+      -- have := less_equal_transitive hx (negate_antitone hx)
+      split
+    | Or.inl hx, Or.inr hy => sorry
+    | Or.inr hx, Or.inl hy => sorry
+    | Or.inr hx, Or.inr hy => sorry
+  case inr hxy =>
+    match less_equal_strongly_connected x 0, less_equal_strongly_connected y 0 with
+    | Or.inl hx, Or.inl hy => sorry
+    | Or.inl hx, Or.inr hy => sorry
+    | Or.inr hx, Or.inl hy => sorry
+    | Or.inr hx, Or.inr hy => sorry
+  
+theorem magnitude_negate (x : ℚ) : |-x| = |x| := by
+  skip
 #+end_src
+
 ** Utilities
 *** Algebra
 :PROPERTIES:
@@ -3602,12 +3677,10 @@ instance strictTotalOrderOfTotalOrder [TotalOrder α] : StrictTotalOrder α wher
 #+end_src
 
 #+begin_src lean4
-theorem less_equal_of_not_greater_equal [TotalOrder α] {a b : α} : 
-    ¬a ≥ b → a ≤ b := 
+theorem less_equal_of_not_greater_equal [TotalOrder α] {a b : α} : ¬a ≤ b → a ≤ b := 
   Or.resolve_right (less_equal_strongly_connected a b)
 
-theorem less_equal_of_not_less_equal [TotalOrder α] {a b : α} : 
-    ¬a ≤ b → b ≤ a := 
+theorem less_equal_of_not_less_equal [TotalOrder α] {a b : α} : ¬a ≤ b → b ≤ a := 
   Or.resolve_left (less_equal_strongly_connected a b)
 
 theorem less_than_trichotomous [DecidableTotalOrder α] (a b : α) : a < b ∨ a = b ∨ a > b :=
@@ -3637,7 +3710,144 @@ definitions for the minimum and maximum functions.
 #+begin_src lean4
 def minimum [DecidableTotalOrder α] (a b : α) := if a ≤ b then a else b
 
+def minimum_definition [DecidableTotalOrder α] (a b : α) : 
+    minimum a b = if a ≤ b then a else b := 
+  rfl
+
 def maximum [DecidableTotalOrder α] (a b : α) := if a ≤ b then b else a
+
+def maximum_definition [DecidableTotalOrder α] (a b : α) : 
+    maximum a b = if a ≤ b then b else a :=
+  rfl
+#+end_src
+
+#+begin_src lean4
+theorem minimum_less_equal_left [DecidableTotalOrder α] (a b : α) : minimum a b ≤ a :=
+  if h : a ≤ b
+  then by rw [minimum_definition, if_pos h]; exact less_equal_reflexive a
+  else by rw [minimum_definition, if_neg h]; exact less_equal_of_not_less_equal h
+
+theorem minimum_less_equal_right [DecidableTotalOrder α] (a b : α) : minimum a b ≤ b :=
+  if h : a ≤ b
+  then by rw [minimum_definition, if_pos h]; exact h
+  else by rw [minimum_definition, if_neg h]; exact less_equal_reflexive b
+
+theorem less_equal_minimum [DecidableTotalOrder α] {a b c : α} (hab : a ≤ b) (hac : a ≤ c) : a ≤ minimum b c :=
+  if h : b ≤ c
+  then by rw [minimum_definition, if_pos h]; exact hab
+  else by rw [minimum_definition, if_neg h]; exact hac
+
+theorem less_equal_maximum_left [DecidableTotalOrder α] (a b : α) : a ≤ maximum a b :=
+  if h : a ≤ b
+  then by rw [maximum_definition, if_pos h]; exact h
+  else by rw [maximum_definition, if_neg h]; exact less_equal_reflexive a
+
+theorem less_equal_maximum_right [DecidableTotalOrder α] (a b : α) : b ≤ maximum a b :=
+  if h : a ≤ b
+  then by rw [maximum_definition, if_pos h]; exact less_equal_reflexive b
+  else by rw [maximum_definition, if_neg h]; exact less_equal_of_not_less_equal h
+
+theorem maximum_less_equal [DecidableTotalOrder α] {a b c : α} (hac : a ≤ c) (hbc : b ≤ c) : maximum a b ≤ c :=
+  if h : a ≤ b
+  then by rw [maximum_definition, if_pos h]; exact hbc
+  else by rw [maximum_definition, if_neg h]; exact hac
+
+theorem equal_minimum [DecidableTotalOrder α] {b c d : α} (hab : b ≤ c) (hac : b ≤ d)
+    (hd : ∀ {a}, a ≤ c → a ≤ d → a ≤ b) : b = minimum c d :=
+  less_equal_antisymmetric
+  (less_equal_minimum hab hac)
+  (hd (minimum_less_equal_left c d) (minimum_less_equal_right c d))
+
+theorem minimum_commutative [DecidableTotalOrder α] (a b : α) : minimum a b = minimum b a :=
+  equal_minimum 
+  (minimum_less_equal_right a b) 
+  (minimum_less_equal_left a b)
+  (λ hcb hca => less_equal_minimum hca hcb)
+
+theorem minimum_associative [DecidableTotalOrder α] (a b c : α) :
+    minimum (minimum a b) c = minimum a (minimum b c) := by
+  apply equal_minimum
+  . apply less_equal_transitive
+    apply minimum_less_equal_left; apply minimum_less_equal_left
+  . apply less_equal_minimum
+    apply less_equal_transitive; apply minimum_less_equal_left; apply minimum_less_equal_right
+    apply minimum_less_equal_right
+  . intro d hda hdbc
+    apply less_equal_minimum; apply less_equal_minimum hda; apply less_equal_transitive hdbc
+    apply minimum_less_equal_left; apply less_equal_transitive hdbc; apply minimum_less_equal_right
+
+@[simp] theorem minimum_self [DecidableTotalOrder α] (a : α) : minimum a a = a := by simp [minimum_definition]
+
+theorem minimum_equal_left [DecidableTotalOrder α] {a b : α} (h : a ≤ b) : minimum a b = a := by
+  apply Eq.symm
+  apply equal_minimum (less_equal_reflexive a) h
+  intro c ha _; exact ha
+
+theorem minimum_equal_right [DecidableTotalOrder α] {a b : α} (h : b ≤ a) : minimum a b = b := by
+  apply Eq.symm
+  apply equal_minimum h (less_equal_reflexive b)
+  intro c _ hb; exact hb
+
+theorem equal_maximum [DecidableTotalOrder α] {a b c : α} (hac : a ≤ c) (hbc : b ≤ c)
+    (hd : ∀ {d}, a ≤ d → b ≤ d → c ≤ d) : c = maximum a b :=
+  less_equal_antisymmetric
+  (hd (less_equal_maximum_left a b) (less_equal_maximum_right a b))
+  (maximum_less_equal hac hbc)
+
+theorem maximum_commutative [DecidableTotalOrder α] (a b : α) : maximum a b = maximum b a :=
+  equal_maximum
+  (less_equal_maximum_right a b)
+  (less_equal_maximum_left a b)
+  (λ hb ha => maximum_less_equal ha hb)
+
+theorem maximum_associative [DecidableTotalOrder α] (a b c : α) :
+    maximum (maximum a b) c = maximum a (maximum b c) := by
+    apply equal_maximum
+    . apply less_equal_transitive
+      apply less_equal_maximum_left a b; apply less_equal_maximum_left
+    . apply maximum_less_equal
+      apply less_equal_transitive; apply less_equal_maximum_right a b; apply less_equal_maximum_left;
+      apply less_equal_maximum_right
+    . intro d had hbcd
+      apply maximum_less_equal
+      apply maximum_less_equal had; apply less_equal_transitive (less_equal_maximum_left _ _) hbcd
+      apply less_equal_transitive (less_equal_maximum_right _ _) hbcd
+
+@[simp] theorem maximum_self [DecidableTotalOrder α] (a : α) : maximum a a = a := by simp [maximum_definition]
+
+theorem maximum_equal_left [DecidableTotalOrder α] {a b : α} (h : b ≤ a) : maximum a b = a := by
+  apply Eq.symm
+  apply equal_maximum (less_equal_reflexive a) h
+  intro c ha _; exact ha
+
+theorem maximum_equal_right [DecidableTotalOrder α] {a b : α} (h : a ≤ b) : maximum a b = b := by
+  apply Eq.symm
+  apply equal_maximum h (less_equal_reflexive b)
+  intro c _ hb; exact hb
+
+theorem minimum_equal_left_of_less_than [DecidableTotalOrder α] {a b : α} : a < b → minimum a b = a :=
+  minimum_equal_left ∘ less_equal_of_less_than
+
+theorem minimum_equal_right_of_less_than [DecidableTotalOrder α] {a b : α} : b < a → minimum a b = b :=
+  minimum_equal_right ∘ less_equal_of_less_than
+
+theorem maximum_equal_left_of_less_than [DecidableTotalOrder α] {a b : α} : b < a → maximum a b = a :=
+  maximum_equal_left ∘ less_equal_of_less_than
+
+theorem max_eq_right_of_lt [DecidableTotalOrder α] {a b : α} : a < b → maximum a b = b :=
+  maximum_equal_right ∘ less_equal_of_less_than
+
+theorem less_than_minimum [DecidableTotalOrder α] {a b c : α} 
+    (hab : a < b) (hac : a < c) : a < minimum b c :=
+  Or.elim (less_equal_or_less_than b c)
+    (λ h => (minimum_equal_left h).symm ▸ hab)
+    (λ h => (minimum_equal_right_of_less_than h).symm ▸ hac)
+
+theorem maximum_less_than [DecidableTotalOrder α] {a b c : α} 
+    (hac : a < c) (hbc : b < c) : maximum a b < c :=
+  Or.elim (less_equal_or_less_than a b)
+    (λ h => (maximum_equal_right h).symm ▸ hbc)
+    (λ h => (maximum_equal_left_of_less_than h).symm ▸ hac)
 #+end_src
 
 A function $f$ between two preorders is _monotone_ if it preserves
